Kubernetes-Yaml-files-of-resources/deploy-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-exmple
spec:
  containers:
  - name: nginx
    image: nginx:stable-alpine
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
      readOnly: true
  - name: content
    image: alpine:latest
    command: ["/bin/sh","-c"]
    args:
    - while true; do
        date >> /html/index.html;
        sleep 5;
      done
    volumeMounts:
    - name: html
      mountPath: /html
  volumes:
  - name: html
    emptyDir: {}
