Kubernetes-Yaml-files-of-resources/multi-container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multiContainerPod
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    volumeMounts:
    - name: web-content-dir
      mountPath: /usr/share/nginx/html
  - name: content-generator
    image: busybox
    command: ['sh', '-c', 'while true; do echo Date and Time is $(date) >> /web-content/index.html && sleep 20; done']
    volumeMounts:
    - name: web-content-dir
      mountpath: "/web-content"    
  volumes:
  - name: web-content-dir
    emptyDir: {}
