Kubernetes-Yaml-files-of-resources/pv-pvc-pod-book.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb 
  namespace: my-ns
spec:
  containers:
  - image: nginx
    name: mongodb
    volumeMounts:
    - name: mongodb-data
      mountPath: /data/db
    ports:
    - containerPort: 80
      protocol: TCP
  volumes:
  - name: mongodb-data
    persistentVolumeClaim:
      claimName: mongodb-pvc
