Kubernetes-Yaml-files-of-resources/selc-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: sel-pod-2
  namespace: myns
spec:
  nodeSelector:
    app: ui
  containers:
  - name: cont3
    image: nginx:alpine
