Kubernetes-Yaml-files-of-resources/simple-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-demo
spec:
  containers:
  - name: init-nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    volumeMounts:
    - name: web-content-dir
      mountPath: /usr/share/nginx/html
  volumes:
  - name: web-content-dir
    emptyDir: {}
