Kubernetes-Yaml-files-of-resources/single-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
  labels:
    app: front-end
spec:
  containers:
  - image: aamirpinger/helloworld
    name: amir
    ports:
    - containerPort: 80
