Kubernetes-Yaml-files-of-resources/vol-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: test-container
    image: gcr.io/google_containers/test-webserver
    volumeMounts:
    - mountPath: /cache
      name: cache-vol
  volumes:
  - name: cache-vol
    emptyDir: {}
