Kubernetes-Yaml-files-of-resources/assignment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assignment2-deployment
spec:
  replicas: 10
  selector:
    matchLabels:
      app: front-end
      rel: stable
  template:
    metadata:
      name: assignment2-pod
      labels:
        app: front-end
        rel: stable
    spec:
      volumes:
      - name: pvc-vol
        persistentVolumeClaim:
          claimName: pvc
      containers:
      - name: nginx-container
        image: aamirpinger/helloworld
        volumeMounts:
        - name: pvc-vol
          mountPath: /tmp/pv
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 12
          timeoutSeconds: 6
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 50
          timeoutSeconds: 4
          failureThreshold: 4
          periodSeconds: 8
---
apiVersion: v1
kind: Service
metadata:
  name: assignment2-svc
spec:
  type: NodePort
  selector:
    app: front-end
    rel: stable
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
