Kubernetes-Yaml-files-of-resources/statefulSet.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: PersistentVolume
  metadata:
    name: pv001
  spec:
    hostPath:
      path: /var
    capacity:
      storage: 300Mi
    accessModes:
    - ReadWriteOnce
    persistentVolumeReclaimPolicy: Recycle
#    storageClassName: pv001
- apiVersion: v1
  kind: PersistentVolume
  metadata:
    name: pv002
  spec:  
    hostPath:
      path: /var
    capacity:
      storage: 300Mi
    accessModes:
    - ReadWriteOnce
    persistentVolumeReclaimPolicy: Recycle
#    storageClassName: pv002
- apiVersion: v1
  kind: PersistentVolume
  metadata:
    name: pv003
  spec:
    hostPath:
      path: /var  
    capacity:
      storage: 300Mi
    accessModes:
    - ReadWriteOnce
    persistentVolumeReclaimPolicy: Recycle
#    storageClassName: pv003
- apiVersion: v1
  kind: Service
  metadata:
    name: svc001
  spec:
    type: NodePort
    selector:
      app: front-end
    ports:
    - name: http
      port: 8080
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    name: sset001
  spec:
    selector:
      matchLabels:
        app: front-end
    serviceName: svc001
    replicas: 3
    template:
      metadata:
        labels:
          app: front-end
      spec:
        containers:
        - name: sset001-cont001
          image: luksa/kubia-pet
          ports:
          - name: http
            containerPort: 8080
          volumeMounts:
          - name: data
            mountPath: /var/data
    volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 200Mi
